# MyCryptoBot

./: .dockerignore  .env.template  .gitignore  ADD_NEW_STRATEGY.md  DISCLAIMER.md  INSTALLATION.md  MODEL_USAGE.md  README.md  docker-compose.yml  proj.conf  pyproject.toml  pytest.ini  requirements.txt
data/: 2014-03-01.json  Dockerfile  Dockerfile.clock  Dockerfile.release  conftest.py  consolidated_coin_data.csv  data_processing.py  entrypoint.sh  etl_pipeline.py  pyproject.toml
data/binance/: __init__.py  _binance.py
data/binance/extract/: __init__.py  _extract.py
data/binance/load/: __init__.py  _load.py
data/binance/transform/: __init__.py  _transform.py
data/binance_exchange/: __init__.py  _binance_exchange.py
data/binance_exchange/extract/: __init__.py  _extract.py
data/binance_exchange/load/: __init__.py  _load.py
data/binance_exchange/transform/: __init__.py
data/extract/: __init__.py  script.py  script_2.py
data/extract/binance/: _binance.py
data/extract/lunarcrush/: __init__.py  _lunarcrush.py  session_key_handler.py
data/extract/messari/: __init__.py  _messari.py  assets.py  headers.py
data/extract/santiment/: __init__.py  _santiment.py
data/extract/twitter/: tweets_fetcher.py  twitter.py
data/load/: __init__.py
data/lunarcrush/extract/: _lunarcrush.py  session_key_handler.py
data/lunarcrush/transform/: __init__.py  _transform.py
data/messari/extract/: __init__.py  _messari.py  assets.py
data/santiment/extract/: __init__.py  _santiment.py
data/service/: __init__.py  app.py  external_requests.py  helpers.py  wsgi.py
data/service/blueprints/: bots_api.py  dashboard.py  events.py  proxy.py  user_management.py
data/service/cron_jobs/: main.py
data/service/helpers/: __init__.py  _helpers.py  responses.py
data/sources/: __init__.py  _signal_triggerer.py  _sources.py
data/sources/binance/: __init__.py  _binance.py
data/sources/binance/load/: _load.py  (+1 more)
data/tests/helpers/: mocks.py  sample_data.py
data/tests/service/: test_app.py  test_data_app.py  test_data_external_requests.py  test_external_requests.py
data/tests/sources/: test_sources.py
data/transform/: __init__.py  _transform.py
data/transform/lunarcrush/: _transform.py
data/twitter/extract/: __init__.py  tweets_fetcher.py  twitter.py
execution/: Dockerfile  entrypoint.sh  pyproject.toml
execution/binance/: __init__.py  _trading.py
execution/exchanges/binance/: __init__.py  _trading.py
execution/service/: __init__.py  app.py  reconciliation.py  wsgi.py
execution/service/blueprints/: market_data.py
execution/service/cron_jobs/: main.py
execution/service/helpers/: __init__.py  _helpers.py  responses.py
execution/tests/service/: test_app.py  test_execution_app.py  test_reconciliation.py
model/: Dockerfile.web  Dockerfile.worker  exploration.py  model.py  model_training.py  pyproject.toml  worker.py
model/backtesting/: __init__.py  _mixin.py
model/backtesting/combining/: __init__.py  _combining.py
model/backtesting/helpers/: __init__.py  results_constants.py  trade.py
model/backtesting/iterative/: __init__.py  _iterative.py
model/backtesting/plotting/: __init__.py  _plotting.py
model/backtesting/vectorized/: __init__.py  _vectorized.py
model/data/: leverage_brackets.json
model/data_preparation/: feature_engineering.py  labelling.py
model/explorations/: exploration.py
model/helpers/: helper_methods.py  logger.py  pipeline_classes.py  ts_differencing.py
model/modelling/: model_evaluation.py  model_training.py
model/modelling/evaluation/: __init__.py
model/modelling/helpers/: __init__.py  pipeline_classes.py
model/modelling/training/: __init__.py  _training.py
model/sample_data/: bitcoin.csv
model/service/: __init__.py  app.py  external_requests.py  wsgi.py
model/service/cloud_storage/: __init__.py  _cloud_storage.py  _download.py  _upload.py
model/service/helpers/: __init__.py  _helpers.py  responses.py  signal_generator.py
model/signal_generation/: __init__.py  _exceptions.py  _helpers.py  _signal_generation.py
model/strategies/: __init__.py  _mixin.py  _strategies.py  properties.py
model/strategies/machine_learning/: __init__.py  _machine_learning.py
model/strategies/mean_reversion/: __init__.py  bollinger_bands.py
model/strategies/moving_average/: __init__.py  ma.py  ma_crossover.py  macd.py  test_strategy.py
model/strategies/trend/: __init__.py  momentum.py
model/tests/service/: test_app.py  test_external_requests.py  test_model_app.py  test_model_external_requests.py
model/tests/signal_generation/: test_order_delivery.py  test_signal_generator.py
model/tests/strategies/: test_signal_generator.py  test_strategies.py
order_execution/: pyproject.toml
order_execution/binance/: _trading.py
quant_model/: Dockerfile  Dockerfile.worker  entrypoint.sh  model.py  pyproject.toml
quant_model/backtesting/: __init__.py  _mixin.py  base.py
quant_model/backtesting/iterative/: __init__.py  _iterative.py  _mixin.py  base.py  macd.py  mean_reversion.py  momentum.py  predictive.py  sma.py  sma_crossover.py
quant_model/backtesting/vectorized/: __init__.py  _mixin.py  _vectorized.py  base.py  macd.py  mean_reversion.py  momentum.py  predictive.py  sma.py  sma_crossover.py
quant_model/data_preparation/: data_processing.py  feature_engineering.py  resampling.py
quant_model/data_preparation/extract/: __init__.py
quant_model/data_preparation/load/: __init__.py  _load.py
quant_model/data_preparation/transform/: __init__.py  _transform.py  cleaning.py
quant_model/modelling/: defaults.py  model_training.py
quant_model/modelling/helpers/: __init__.py  pipeline_classes.py
quant_model/service/: app.py
quant_model/strategies/: __init__.py  _mixin.py  ma.py  ma_crossover.py  macd.py  mean_reversion.py  mixin.py  momentum.py  predictive.py  sma.py  sma_crossover.py
quant_model/strategies/machine_learning/: __init__.py  _machine_learning.py
quant_model/strategies/mean_reversion/: __init__.py  bollinger_bands.py
quant_model/strategies/moving_average/: __init__.py  ma.py  ma_crossover.py  macd.py
(+534 files in other folders)
