[tool.poetry]
name = "MyCryptoBot"
version = "0.1.0"
description = "Root package management for MyCryptoBot"
authors = ["Diogo Matos Chaves <diogo_chaves@hotmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
python-binance = "~1.0.19"
python-dotenv = "^0.17.0"
matplotlib = "^3.4.1"
seaborn = "^0.11.1"
scipy = "^1.6.2"
pandas = "^1.2.1"
numpy = "^1.20.2"
werkzeug = "2.3.4"
Flask = "2.2.2"
Flask-Cors = "^3.0.10"
Flask-JWT-Extended = "4.4.4"
Django = "^3.1.7"
gunicorn = "^20.1.0"
dj-database-url = "^0.5.0"
requests = "^2.25.1"
redis = "^3.5.3"
rq = "^1.8.0"
ta = "^0.7.0"
psycopg2 = "^2.9.5"
apscheduler = "^3.10.1"
plotly = "^5.14.1"
humanfriendly = "^10.0"
progressbar2 = "^4.2.0"
stratestic = "^1.0.0"


[tool.poetry.group.dev.dependencies]
black = "22.3.0"
pytest = "^7.4.4"
pytest-cov = "^2.11.1"
pytest-mock = "^3.6.0"
pytest-django = "^4.2.0"
pytest-flask = "^1.2.0"
pytest-responsemock = "^1.0.1"
ipython = "^7.22.0"
pytest-env = "^1.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"