[tool.poetry]
name = "MyCryptoBot"
version = "0.1.0"
description = "Root package management for MyCryptoBot"
authors = ["Diogo Matos Chaves <diogo_chaves@hotmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
python-binance = "~1.0.37"
python-dotenv = "^1.0"
matplotlib = "^3.8"
seaborn = "^0.13"
scipy = "^1.11"
pandas = "^2.1"
numpy = "^1.26"
werkzeug = "^3.0"
Flask = "^3.0"
Flask-Cors = "^4.0"
Flask-JWT-Extended = "^4.6"
Django = "^4.2"
gunicorn = "^22.0"
dj-database-url = "^2.1"
requests = "^2.32"
redis = "^5.0"
rq = "^1.16"
ta = "^0.11"
psycopg2 = "^2.9.9"
apscheduler = "^3.10.1"
plotly = "^5.14.1"
humanfriendly = "^10.0"
progressbar2 = "^4.2.0"
stratestic = "^2.0"
boto3 = "^1.34.48"


[tool.poetry.group.dev.dependencies]
black = "^24.0"
pytest = "^7.4.4"
pytest-cov = "^4.1"
pytest-mock = "^3.6.0"
pytest-django = "^4.5"
pytest-flask = "^1.3"
pytest-responsemock = "^1.0.1"
ipython = "^8.0"
pytest-env = "^1.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"