[tool.poetry]
name = "data"
version = "0.1.0"
description = "Data Service. Consumes data, transforms it and loads it onto a database."
authors = ["Diogo Matos Chaves <diogo_chaves@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
python-binance = "==1.0.14"
Django = "3.2.17"
pandas = "1.2.4"
numpy = "^1.20.2"
python-dotenv = "^0.17.0"
requests = "^2.25.1"
gunicorn = "^20.1.0"
Flask = "2.2.2"
dj-database-url = "^0.5.0"
redis = "^3.5.3"
Flask-Cors = "^3.0.10"
Flask-JWT-Extended = "^4.4.4"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.11.1"
pytest = "^6.2.3"
pytest-mock = "^3.5.1"
ipython = "^7.22.0"
pytest-responsemock = "^1.0.1"
pytest-django = "^4.2.0"
pytest-flask = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
