[tool.poetry]
name = "data"
version = "0.1.0"
description = "Data Service. Consumes data, transforms it and loads it onto a database."
authors = ["Diogo Matos Chaves <diogo_chaves@hotmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
python-binance = "~1.0.19"
Django = "^4.2"
pandas = "^2.1"
numpy = "^1.26"
python-dotenv = "^1.0"
requests = "^2.32"
gunicorn = "^22.0"
Flask = "^3.0"
dj-database-url = "^2.1"
redis = "^5.0"
Flask-Cors = "^4.0"
Flask-JWT-Extended = "^4.6"
APScheduler = "^3.10.1"
progressbar2 = "^4.2.0"
werkzeug = "^3.0"
stratestic = "^2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1"
pytest-mock = "^3.5.1"
ipython = "^8.0"
pytest-responsemock = "^1.0.1"
pytest-django = "^4.5"
pytest-flask = "^1.3"
pytest-env = "^1.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
