[tool.poetry]
name = "order_execution"
version = "0.1.0"
description = "Order Execution Service. Handles connection to the exchanges API's and executes orders."
authors = ["Diogo Matos Chaves <diogo_chaves@hotmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
python-binance = "^1.0.16"
python-dotenv = "^0.17.0"
Flask = "2.2.2"
Django = "^3.1.7"
gunicorn = "^20.1.0"
dj-database-url = "^0.5.0"
requests = "^2.25.1"
redis = "^4.0.2"
Flask-Cors = "^3.0.10"
Flask-JWT-Extended = "4.4.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
pytest-cov = "^2.11.1"
pytest-mock = "^3.6.0"
pytest-django = "^4.2.0"
pytest-flask = "^1.2.0"
ipython = "^7.22.0"
pandas = "^1.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
