[tool.poetry]
name = "quant_model"
version = "0.1.0"
description = "Quant Model Service. Loads data from database and calculates signals. Trains machine learning models. Provides backtesting tools."
authors = ["Diogo Matos Chaves <diogo_chaves@hotmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
python-dotenv = "^0.17.0"
matplotlib = "^3.4.1"
numpy = "^1.20.2"
scipy = "^1.6.2"
pandas = "^1.2.3"
scikit-learn = "^0.24.1"
fitfeatures = "^0.0.5"
seaborn = "^0.11.1"
Flask = "2.2.2"
Django = "^3.1.7"
gunicorn = "^20.1.0"
rq = "^1.8.0"
redis = "^3.5.3"
dj-database-url = "^0.5.0"
ta = "^0.7.0"
statsmodels = "^0.12.2"
requests = "^2.25.1"
python-binance = "^1.0.16"
Flask-JWT-Extended = "4.4.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
pytest-cov = "^2.11.1"
pytest-mock = "^3.5.1"
pytest-django = "^4.2.0"
pytest-flask = "^1.2.0"
ipython = "^7.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
