[tool.poetry]
name = "model"
version = "0.1.0"
description = "Model Service. Handles the signal generation logic."
authors = ["Diogo Matos Chaves <diogo_chaves@hotmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
python-dotenv = "^0.17.0"
pandas = "^1.2.3"
Flask = "2.2.2"
werkzeug = "2.3.4"
Django = "^3.1.7"
gunicorn = "^20.1.0"
rq = "^1.8.0"
redis = "^3.5.3"
dj-database-url = "^0.5.0"
requests = "2.25.1"
python-binance = "~1.0.19"
Flask-JWT-Extended = "4.4.4"
urllib3 = "1.26.15"
stratestic = "^1.0.0"
boto3 = "^1.34.48"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^2.11.1"
pytest-mock = "^3.5.1"
pytest-django = "^4.2.0"
pytest-flask = "^1.2.0"
pytest-env = "^1.1.3"
ipython = "^7.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
