[tool.poetry]
name = "model"
version = "0.1.0"
description = "Model Service. Handles the signal generation logic."
authors = ["Diogo Matos Chaves <diogo_chaves@hotmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
python-dotenv = "^1.0"
pandas = "^2.1"
Flask = "^3.0"
werkzeug = "^3.0"
Django = "^4.2"
gunicorn = "^22.0"
rq = "^1.16"
redis = "^5.0"
dj-database-url = "^2.1"
requests = "^2.32"
python-binance = "~1.0.19"
Flask-JWT-Extended = "^4.6"
stratestic = "^2.0"
boto3 = "^1.34.48"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1"
pytest-mock = "^3.5.1"
pytest-django = "^4.5"
pytest-flask = "^1.3"
pytest-env = "^1.1.3"
ipython = "^8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
